--- a/sample2.yml
+++ b/sample2.yml
@@ -2,7 +2,7 @@
 - hosts: all
   become: yes
   tasks:
-  - name: install tree
+  - name: install git
     apt: 
-     name: tree
+     name: git
      state: present
