--- a/webservers.yml
+++ b/webservers.yml
@@ -1,31 +1,31 @@
 ---
-- hosts: webservers
+- hosts: all
   become: yes
   gather_facts: yes
   tasks:
   - name: install the webserver on ubuntu 16
     apt:
-     name: installpachagesonubuntu
+     name: appache2
      state: present
     when: ansible_os_family =="DEbian"
 
   - name: start the web server on ubuntu 16
     service:
-     name: installpachagesonubuntu
+     name: appache2
      state: started
     when: ansible_os_family =="DEbian"
 
 
   - name: install the webser on RedHat nodes
     yum:
-     name: installpackagesonRedHat
+     name: httpd
      state: present
     when: ansible_os_family =="RedHat"
 
   - name: start the webserver on RedHat machines
     service:
-     name: installpackagesonRedHat
+     name: httpd
      state: started
     when: ansible_os_family =="RedHat"
 
-    
+
