os family updated

--- a/webservers2.yml
+++ b/webservers2.yml
@@ -2,12 +2,13 @@
 - hosts: all
   become: yes
   tasks:
-  - name: install the webserver on ubuntu 16
+  - name: install the git on ubuntu 16
     apt:
-     name: git
-     state: present
-
-  - name: install the webserver on ubuntu 16
+      name: git
+      state: present
+    when: ansible_os_family =="Debian"
+  - name: install the apache2 webserver on ubuntu 16
     apt:
-     name: apache2 
-     state: present
+      name: apache2 
+      state: present
+    when: ansible_os_family =="RedHat"
