--- a/webservers2.yml
+++ b/webservers2.yml
@@ -5,10 +5,10 @@
   - name: install the git on ubuntu 16
     apt:
       name: git
-      state: present
+      state: absent
     when: ansible_os_family =="Debian"
   - name: install the httpd webserver on RedHat
     yum:
       name: httpd 
-      state: present
+      state: absent
     when: ansible_os_family =="RedHat"
