--- a/webservers2.yml
+++ b/webservers2.yml
@@ -14,7 +14,7 @@
     when: ansible_os_family =="Debian"
 
   - name: install the httpd webserver on RedHat
-    yum:
+    service:
       name: httpd 
-      state: present
+      state: started
     when: ansible_os_family =="RedHat"
