--- a/webservers2.yml
+++ b/webservers2.yml
@@ -7,6 +7,7 @@
       name: apache2
       state: present
     when: ansible_os_family =="Debian"
+
   - name: start the apache2 server
     service:
       name: apache2 
@@ -15,7 +16,7 @@
 
   - name: install the httpd on RedHat
     yum:
-      name: apache2
+      name: httpd
       state: present
       when: ansible_os_family =="RedHat"
 
