--- a/webservers2.yml
+++ b/webservers2.yml
@@ -1,27 +1,27 @@
 ---
-- hosts: all
+- hosts: webservers
   become: yes
   tasks:
   - name: install the appache2 on ubuntu 16
     apt:
-      name: apache2
+      name: webpackonubuntu
       state: present
     when: ansible_os_family =="Debian"
 
   - name: start the apache2 server
     service:
-      name: apache2 
+      name: webpackonubuntu 
       state: started
     when: ansible_os_family =="Debian"
 
   - name: install the httpd on RedHat
     yum:
-      name: httpd
+      name: webpackageonRedHat
       state: present
     when: ansible_os_family =="RedHat"
 
   - name: install the httpd webserver on RedHat
     service:
-      name: httpd 
+      name: webpackageonRedHat 
       state: started
     when: ansible_os_family =="RedHat"
